--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 pygame = "^2.5.2"
+imageio = "^2.34.0"
 
 [tool.poetry.group.dev.dependencies]
 isort = "^5.13.2"
